--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
-    "jasmine": "^3.10.0",
-    "jasmine-spec-reporter": "^7.0.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
-    "sharp": "^0.29.3",
-    "supertest": "^6.1.6"
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -43,9 +40,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "jasmine": "^3.10.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "supertest": "^6.1.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
